--- a/Salud-Bienestar/html/contactoods.html
+++ b/Salud-Bienestar/html/contactoods.html
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/salud-Bienestar/css/contacto.css">
-    <link rel="stylesheet" href="/salud-Bienestar/css/ods.css">
+    <link rel="stylesheet" href="/Salud-Bienestar/css/contacto.css">
+    <link rel="stylesheet" href="/Salud-Bienestar/css/ods.css">
 
 
   <!-- 
     - Imagenes para  le banner 
   -->
-  <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-1.jpg">
-  <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-2.jpg">
-  <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-3.jpg">
+  <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-1.jpg">
+  <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-2.jpg">
+  <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-3.jpg">
 
 </head>
 
@@ -86,7 +86,7 @@
     <div class="container">
 
         <a href="#" class="logo">
-        <img src="/salud-Bienestar/image/Logo.png" width="50" height="50" alt="ods">
+        <img src="/Salud-Bienestar/image/Logo.png" width="50" height="50" alt="ods">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -106,7 +106,7 @@
         <ul class="navbar-list">
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/principalods.html" class="navbar-link hover-underline active">
+            <a href="/Salud-Bienestar/principalods.html" class="navbar-link hover-underline active">
                 <div class="separator"></div>
 
                 <span class="span">INICIO</span>
@@ -114,7 +114,7 @@
             </l>
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
+            <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">Sobre Nosotros</span>
@@ -122,7 +122,7 @@
             </li>
 
             <li class="navbar-item">
-                <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
+                <a href="/Salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                     <div class="separator"></div>
     
                     <span class="span">SYBM</span>
@@ -130,7 +130,7 @@
             </li>
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/galeriaods.html" class="navbar-link hover-underline">
+            <a href="/Salud-Bienestar/html/galeriaods.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">Galeria</span>
@@ -138,7 +138,7 @@
             </li>
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/recursosods.html" class="navbar-link hover-underline">
+            <a href="/Salud-Bienestar/html/recursosods.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">Recursos</span>
@@ -147,7 +147,7 @@
 
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/contactoods.html" class="navbar-link hover-underline">
+            <a href="/Salud-Bienestar/html/contactoods.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">CONTACTO</span>
@@ -193,7 +193,7 @@
                 <p class="body-2 hero-text slider-reveal">
                     Te speramos
                 </p>
-                <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
+                <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
                     <span class="text text-1">Ver Mas</span>
     
                     <span class="text text-2" aria-hidden="true">Ver Mas</span>
@@ -212,7 +212,7 @@
                 <p class="body-2 hero-text slider-reveal">
                     Te esperamos
                 </p>
-                <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
+                <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
                     <span class="text text-1">Ver Mas</span>
                     <span class="text text-2" aria-hidden="true">Ver Mas</span>
                 </a>
@@ -230,7 +230,7 @@
                 <p class="body-2 hero-text slider-reveal">
                     Juntos por un futuro más saludable
                 </p>
-                <a href="/salud-Bienestar/html/galeriaods.html" class="btn btn-primary slider-reveal">
+                <a href="/Salud-Bienestar/html/galeriaods.html" class="btn btn-primary slider-reveal">
                     <span class="text text-1">Ver Mas</span>
                     <span class="text text-2" aria-hidden="true">Ver Mas</span>
                 </a>
@@ -250,7 +250,7 @@
                     <p class="body-2 hero-text slider-reveal">
                         Descubre recursos y herramientas para construir un futuro mejor.
                     </p>
-                    <a href="/salud-Bienestar/html/recursosods.html" class="btn btn-primary slider-reveal">
+                    <a href="/Salud-Bienestar/html/recursosods.html" class="btn btn-primary slider-reveal">
                         <span class="text text-1">Ver Mas</span>
                         <span class="text text-2" aria-hidden="true">Ver Mas</span>
                     </a>
@@ -304,7 +304,7 @@
     <section class="equipo-miembros">
         <div class="equipo-contenedor">
             <div class="miembro-equipo">
-                <img src="/salud-Bienestar/partners/karla.jpg" alt="Karla Magallanes" class="imagen-perfil">
+                <img src="/Salud-Bienestar/partners/karla.jpg" alt="Karla Magallanes" class="imagen-perfil">
                 <h5>Karla Anyelí Magallanes Vicente</h5>
                 <p>
                     Estudiante de Análisis de Sistemas y entusiasta de la programación y el desarrollo web. 
@@ -323,7 +323,7 @@
             </div>
 
             <div class="miembro-equipo">
-                <img src="/salud-Bienestar/partners/lucas.jpg" alt="Lucas Leyva" class="imagen-perfil">
+                <img src="/Salud-Bienestar/partners/lucas.jpg" alt="Lucas Leyva" class="imagen-perfil">
                 <h5>Christopher Lucas Leyva Chumpitaz</h5>
                 <p>
                     Un innovador en el corazón, apasionado por la tecnología y el diseño de software. 
@@ -342,7 +342,7 @@
             </div>
 
             <div class="miembro-equipo">
-                <img src="/salud-Bienestar/partners/luis.jpg" alt="Luis Mencia" class="imagen-perfil">
+                <img src="/Salud-Bienestar/partners/luis.jpg" alt="Luis Mencia" class="imagen-perfil">
                 <h5>Luis Fernando Mencia Chipa</h5>
                 <p>
                     Apasionado desarrollador web que se dedica a crear aplicaciones útiles y accesibles para todos. 
@@ -368,7 +368,7 @@
     <section class="ods-container">
         <h2 class="ods-title"><i class="fas fa-envelope"></i> Formulario de Contacto</h2>
         <div class="ods-form-container">
-            <form id="contactForm" action="/salud-Bienestar/php/form.php" method="POST" class="ods-form">
+            <form id="contactForm" action="/Salud-Bienestar/php/form.php" method="POST" class="ods-form">
                 <div class="ods-form-left">
                     <div class="ods-form-group">
                         <label for="nombres"><i class="fas fa-user"></i> Nombres</label>
@@ -536,8 +536,8 @@
         }
     </script>
 
-    <link rel="stylesheet" href="/salud-Bienestar/js/IA-Chat-GPT/IA.css">
-    <script type="module" src="/salud-Bienestar/js/IA-Chat-GPT/IA.js"></script>
+    <link rel="stylesheet" href="/Salud-Bienestar/js/IA-Chat-GPT/IA.css">
+    <script type="module" src="/Salud-Bienestar/js/IA-Chat-GPT/IA.js"></script>
 
 
     </article>
@@ -560,7 +560,7 @@
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="/salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy" alt="Salud y Bienestar">
+            <img src="/Salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy" alt="Salud y Bienestar">
           </a>
 
           <p class="body-4">
@@ -594,23 +594,23 @@
         <ul class="footer-list">
 
           <li>
-            <a href="/salud-Bienestar/html/principalods.html" class="label-2 footer-link hover-underline">Inicio</a>
+            <a href="/Salud-Bienestar/html/principalods.html" class="label-2 footer-link hover-underline">Inicio</a>
           </li>
 
           <li>
-            <a href="/salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre Nosotros</a>
+            <a href="/Salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre Nosotros</a>
           </li>
 
           <li>
-            <a href="/salud-Bienestar/html/galeriaods.html" class="label-2 footer-link hover-underline">Galeria</a>
+            <a href="/Salud-Bienestar/html/galeriaods.html" class="label-2 footer-link hover-underline">Galeria</a>
           </li>
 
           <li>
-            <a href="/salud-Bienestar/html/recursosods.html" class="label-2 footer-link hover-underline">Recursos</a>
+            <a href="/Salud-Bienestar/html/recursosods.html" class="label-2 footer-link hover-underline">Recursos</a>
           </li>
 
           <li>
-            <a href="/salud-Bienestar/html/contactoods.html" class="label-2 footer-link hover-underline">Contacto</a>
+            <a href="/Salud-Bienestar/html/contactoods.html" class="label-2 footer-link hover-underline">Contacto</a>
           </li>
 
         </ul>
@@ -657,11 +657,11 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="/salud-Bienestar/js/ods.js"></script>
+  <script src="/Salud-Bienestar/js/ods.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/salud-Bienestar/js/equipo.js"></script>
-  <script src="/salud-Bienestar/js/contacto.js"></script>
+  <script src="/Salud-Bienestar/js/equipo.js"></script>
+  <script src="/Salud-Bienestar/js/contacto.js"></script>
 
 </body>
 
