--- a/Salud-Bienestar/html/recursosods.html
+++ b/Salud-Bienestar/html/recursosods.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/salud-Bienestar/css/ods.css">
-    <link rel="stylesheet" href="/salud-Bienestar/css/recursos.css">
+    <link rel="stylesheet" href="/Salud-Bienestar/css/ods.css">
+    <link rel="stylesheet" href="/Salud-Bienestar/css/recursos.css">
 
     <!-- Link de css de Entretenimiento y Juegos -->
-    <link rel="stylesheet" href="/salud-Bienestar/seccion-juegos/assets/stylesheet/index.css">
+    <link rel="stylesheet" href="/Salud-Bienestar/seccion-juegos/assets/stylesheet/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Woodland&display=swap" rel="stylesheet">
 
 
@@ -31,9 +31,9 @@
     <!-- 
     - Imagenes para  le banner 
   -->
-    <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-1.jpg">
-    <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-2.jpg">
-    <link rel="preload" as="image" href="./salud-Bienestar/images/hero-slider-3.jpg">
+    <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-1.jpg">
+    <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-2.jpg">
+    <link rel="preload" as="image" href="./Salud-Bienestar/images/hero-slider-3.jpg">
 
 </head>
 
@@ -97,7 +97,7 @@
         <div class="container">
 
             <a href="#" class="logo">
-                <img src="/salud-Bienestar/image/Logo.png" width="50" height="50" alt="ods">
+                <img src="/Salud-Bienestar/image/Logo.png" width="50" height="50" alt="ods">
             </a>
 
             <button class="nav-toggle-btn" aria-label="toggle menu" data-nav-toggler>
@@ -118,7 +118,7 @@
                 <ul class="navbar-list">
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/principalods.html" class="navbar-link hover-underline active">
+                        <a href="/Salud-Bienestar/principalods.html" class="navbar-link hover-underline active">
                             <div class="separator"></div>
 
                             <span class="span">INICIO</span>
@@ -126,7 +126,7 @@
                         </l>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Sobre Nosotros</span>
@@ -134,7 +134,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
             
                             <span class="span">SYBM</span>
@@ -142,7 +142,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/galeriaods.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/galeriaods.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Galeria</span>
@@ -150,7 +150,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/recursosods.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/recursosods.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Recursos</span>
@@ -159,7 +159,7 @@
 
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/contactoods.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/contactoods.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">CONTACTO</span>
@@ -206,7 +206,7 @@
                         <p class="body-2 hero-text slider-reveal">
                             Te speramos
                         </p>
-                        <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
+                        <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
                             <span class="text text-1">Ver Mas</span>
 
                             <span class="text text-2" aria-hidden="true">Ver Mas</span>
@@ -226,7 +226,7 @@
                         <p class="body-2 hero-text slider-reveal">
                             Te esperamos
                         </p>
-                        <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
+                        <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="btn btn-primary slider-reveal">
                             <span class="text text-1">Ver Mas</span>
                             <span class="text text-2" aria-hidden="true">Ver Mas</span>
                         </a>
@@ -245,7 +245,7 @@
                         <p class="body-2 hero-text slider-reveal">
                             Juntos por un futuro más saludable
                         </p>
-                        <a href="/salud-Bienestar/html/galeriaods.html" class="btn btn-primary slider-reveal">
+                        <a href="/Salud-Bienestar/html/galeriaods.html" class="btn btn-primary slider-reveal">
                             <span class="text text-1">Ver Mas</span>
                             <span class="text text-2" aria-hidden="true">Ver Mas</span>
                         </a>
@@ -266,7 +266,7 @@
                         <p class="body-2 hero-text slider-reveal">
                             Descubre recursos y herramientas para construir un futuro mejor.
                         </p>
-                        <a href="/salud-Bienestar/html/recursosods.html" class="btn btn-primary slider-reveal">
+                        <a href="/Salud-Bienestar/html/recursosods.html" class="btn btn-primary slider-reveal">
                             <span class="text text-1">Ver Mas</span>
                             <span class="text text-2" aria-hidden="true">Ver Mas</span>
                         </a>
@@ -286,7 +286,7 @@
                         <p class="body-2 hero-text slider-reveal">
                             Tu bienestar es nuestra prioridad, únete a esta noble causa.
                         </p>
-                        <a href="/salud-Bienestar/html/contactoods.html" class="btn btn-primary slider-reveal">
+                        <a href="/Salud-Bienestar/html/contactoods.html" class="btn btn-primary slider-reveal">
                             <span class="text text-1">Ver Mas</span>
                             <span class="text text-2" aria-hidden="true">Ver Mas</span>
                         </a>
@@ -344,9 +344,9 @@
                 <p>Infografías, pósters, guías, presentaciones, juegos interactivos y más, diseñados para facilitar el
                     aprendizaje y la participación.</p>
                 <ul>
-                    <li><a href="/salud-Bienestar/proyecto-ecologico/proyecto-ecologico.html">Guía para iniciar proyectos ecológicos.</a></li>
-                    <li><a href="/salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html">Juego interactivo de concienciación ambiental.</a></li>
-                    <li><a href="/salud-Bienestar/proyecto-ecologico/infografia/Infografía.html">Infografía sobre la reducción de la huella de carbono.</a>
+                    <li><a href="/Salud-Bienestar/proyecto-ecologico/proyecto-ecologico.html">Guía para iniciar proyectos ecológicos.</a></li>
+                    <li><a href="/Salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html">Juego interactivo de concienciación ambiental.</a></li>
+                    <li><a href="/Salud-Bienestar/proyecto-ecologico/infografia/Infografía.html">Infografía sobre la reducción de la huella de carbono.</a>
                     </li>
                 </ul>
             </section>
@@ -361,7 +361,7 @@
                     <div class="cards--proyectos card_JuegoAhorcado" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom">
                     <div class="card_JuegoAhorcado">
                             <video autoplay loop muted controls class="videoCard--proyectos">
-                                <source src="/salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
+                                <source src="/Salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                         </div>
@@ -376,9 +376,9 @@
                         </div>
 
                         <div class="container_btn--proyectos">
-                            <a href="/salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
+                            <a href="/Salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
                                 <button class="btn_demo">
-                                    <img src="/salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración">
+                                    <img src="/Salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración">
                                     JUGAR
                                 </button>
                             </a>
@@ -390,7 +390,7 @@
                     <div class="cards--proyectos card_portafolio" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom">
                         <div class="container_imgCard--proyectos">
                             <video autoplay loop muted controls class="videoCard--proyectos">
-                                <source src="/salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
+                                <source src="/Salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                         </div>
@@ -404,9 +404,9 @@
                         </div>
 
                         <div class="container_btn--proyectos">
-                            <a href="/salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
+                            <a href="/Salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
                                 <button class="btn_demo">
-                                    <img src="/salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración"> JUGAR
+                                    <img src="/Salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración"> JUGAR
                                 </button>
                             </a>
                         </div>
@@ -417,7 +417,7 @@
                     <div class="cards--proyectos card_encriptador" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom">
                     <div class="container_imgCard--proyectos">
                         <video autoplay loop muted controls class="videoCard--proyectos">
-                                <source src="/salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
+                                <source src="/Salud-Bienestar/seccion-juegos/assets/images/viajemos-por-el-mundo-de-las-palabras.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                     </div>
@@ -431,9 +431,9 @@
                     </div>
 
                     <div class="container_btn--proyectos">
-                            <a href="/salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
+                            <a href="/Salud-Bienestar/seccion-juegos/juego-del-ahorcado/principalJuego.html" target="_blank">
                                 <button class="btn_demo">
-                                    <img src="/salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración"> JUGAR
+                                    <img src="/Salud-Bienestar/seccion-juegos/assets/images/corazon-logo.png" alt="Demostración"> JUGAR
                                 </button>
                             </a>
                     </div>
@@ -745,8 +745,8 @@
             }
         </script>
 
-        <link rel="stylesheet" href="/salud-Bienestar/js/IA-Chat-GPT/IA.css">
-        <script type="module" src="/salud-Bienestar/js/IA-Chat-GPT/IA.js"></script>
+        <link rel="stylesheet" href="/Salud-Bienestar/js/IA-Chat-GPT/IA.css">
+        <script type="module" src="/Salud-Bienestar/js/IA-Chat-GPT/IA.js"></script>
 
 
         </article>
@@ -769,7 +769,7 @@
                 <div class="footer-brand has-before has-after">
 
                     <a href="#" class="logo">
-                        <img src="/salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy"
+                        <img src="/Salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy"
                             alt="Salud y Bienestar">
                     </a>
 
@@ -805,24 +805,24 @@
                 <ul class="footer-list">
 
                     <li>
-                        <a href="/salud-Bienestar/html/principalods.html" class="label-2 footer-link hover-underline">Inicio</a>
+                        <a href="/Salud-Bienestar/html/principalods.html" class="label-2 footer-link hover-underline">Inicio</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre
+                        <a href="/Salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre
                             Nosotros</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/galeriaods.html" class="label-2 footer-link hover-underline">Galeria</a>
+                        <a href="/Salud-Bienestar/html/galeriaods.html" class="label-2 footer-link hover-underline">Galeria</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/recursosods.html" class="label-2 footer-link hover-underline">Recursos</a>
+                        <a href="/Salud-Bienestar/html/recursosods.html" class="label-2 footer-link hover-underline">Recursos</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/contactoods.html" class="label-2 footer-link hover-underline">Contacto</a>
+                        <a href="/Salud-Bienestar/html/contactoods.html" class="label-2 footer-link hover-underline">Contacto</a>
                     </li>
 
                 </ul>
@@ -869,13 +869,13 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="/salud-Bienestar/js/ods.js"></script>
-    <script src="/salud-Bienestar/js/recursos.js"></script>
+    <script src="/Salud-Bienestar/js/ods.js"></script>
+    <script src="/Salud-Bienestar/js/recursos.js"></script>
 
     <!-- Script de Entretenimiento y Juegos -->
     
 
-    <script src="/salud-Bienestar/js/voluntariado.js"></script>
+    <script src="/Salud-Bienestar/js/voluntariado.js"></script>
 
 </body>
 
