--- a/Salud-Bienestar/html/SYBM.html
+++ b/Salud-Bienestar/html/SYBM.html
@@ -88,7 +88,7 @@
 
             <div class="separator"></div>
 
-            <a href="saludybienestar@ods.pe" class="topbar-item link">
+            <a href="Saludybienestar@ods.pe" class="topbar-item link">
                 <div class="icon">
                     <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
                 </div>
@@ -132,7 +132,7 @@
                         </l>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
+                        <a href="/Salud-Bienestar/html/sobre-nosotrosods.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Sobre Nosotros</span>
@@ -704,7 +704,7 @@
                 <div class="footer-brand has-before has-after">
 
                     <a href="#" class="logo">
-                        <img src="/salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy"
+                        <img src="/Salud-Bienestar/image/Logo.png" width="160" height="50" loading="lazy"
                             alt="Salud y Bienestar">
                     </a>
 
@@ -740,27 +740,27 @@
                 <ul class="footer-list">
 
                     <li>
-                        <a href="/salud-Bienestar/html/principalods.html"
+                        <a href="/Salud-Bienestar/html/principalods.html"
                             class="label-2 footer-link hover-underline">Inicio</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre
+                        <a href="/Salud-Bienestar/html/sobreods.html" class="label-2 footer-link hover-underline">Sobre
                             Nosotros</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/galeriaods.html"
+                        <a href="/Salud-Bienestar/html/galeriaods.html"
                             class="label-2 footer-link hover-underline">Galeria</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/recursosods.html"
+                        <a href="/Salud-Bienestar/html/recursosods.html"
                             class="label-2 footer-link hover-underline">Recursos</a>
                     </li>
 
                     <li>
-                        <a href="/salud-Bienestar/html/contactoods.html"
+                        <a href="/Salud-Bienestar/html/contactoods.html"
                             class="label-2 footer-link hover-underline">Contacto</a>
                     </li>
 
@@ -800,19 +800,19 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="/salud-Bienestar/js/ods.js"></script>
+    <script src="/Salud-Bienestar/js/ods.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/easing/easing.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/waypoints/waypoints.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/counterup/counterup.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/salud-Bienestar/SYBM/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/easing/easing.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/waypoints/waypoints.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/counterup/counterup.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="/Salud-Bienestar/SYBM/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="/salud-Bienestar/SYBM/js/main.js"></script>
+    <script src="/Salud-Bienestar/SYBM/js/main.js"></script>
 
 </body>
 
